Fix text-overflow in song and singer name

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -245,3 +245,9 @@ html {
   height: calc(100% - 1.5rem);
   margin-bottom: 1.5rem;
 }
+
+.text-overflow-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
